stylesheet.less
@import "@{templateCommon}/basekit-bootstrap.less";

body {
    background-color: @color-swatch1;
    margin: 0;
    padding: 0;
    border-top: 6px solid @color-swatch2;
}

a {
    color: @color-swatch2;
}

blockquote:before {
    color: @color-swatch2;
}

/* ===============================
   CUSTOM CSS
   =============================== */

.top-nav {
  display: none;
}

.left-nav {
    background-color: @color-swatch1;
    z-index: 9999;
    width: 240px;
    //height: calc(100% - 6.4em);
    height: 85%;
    position: fixed;
    overflow-x: hidden;
    overflow-y: auto;
    //top: 6.4em;
    left: 0px;
}

.right-content {
    padding-left: 240px;
}

.main {
    padding: 0 2.5em 0 2.5em;
    .widget {
        clear: both;
    }
}

body.edit .widget.navigation, body.edit .widget.extendednavigation {
    overflow: visible;
}

/* DEFAULT PAGE TYPE */

.bk-pt-default .main {
  //padding-top: 6em;
  min-height: 600px;
}

.bk-pt-homepage,
.bk-pt-default {
  padding-top: 6%;
}

/* ===============================
   VERICAL HEADER AND NAV
  =============================== */

.bk-header {
  padding: 20px 20px 150px;
  margin: 0;
  border-right: 1px solid @color-swatch4;
  @media only screen and (max-width: 768px) {
    border-right: none;
  }
  nav {
    width: 100%;
    background-color: @color-swatch7;
  }
  &.widget-content {
    width: 100%;
  }
}

.vertical-nav {
  border-right: 1px solid @color-swatch4;
  width: 240px;
  display: inline-block;
  height: 100%;
}

.companyheader {
  display: block;
}

/* COMPANY NAME */

.widget.companyname {
  text-align: right;
  overflow: hidden;
  a:hover {
    text-decoration: none;
  }
}

.widget.companyname a, .bk-header .widget.content p {
  font-family:@font-swatch10-font-family;
  font-weight: @font-swatch10-font-weight;
  color:@font-swatch10-color;
  line-height:@font-swatch10-line-height;
  letter-spacing: @font-swatch10-letter-spacing;
  font-size: @font-swatch10-font-size;
  padding: 0;
  text-align: right;
  @media only screen and (max-width: 768px) {
    text-align: left;
    width: 100%;
  }
}

/* ===============================
   FOOTER
   =============================== */

.bk-footer {
  background-color: @color-swatch2;
  padding: 20px 0 0 240px;
  margin-top: 1em;
  color: @color-swatch6;
  text-align: right;
  h1, h2, h3, h4 {
    color: @color-swatch1;
    padding-bottom: 20px;
  }
}

/* ===============================
   VERTICAL NAVIGATION
   =============================== */

.vertical-nav {
  .widget.extendednavigation {
    .clearfix;
    position: relative;
    background-color: @color-swatch1;
    ul {
      padding: 0 20px;
      margin: 0;
      width: 240px;
      background-color: transparent;
      li {
        display: block;
        width: 100%;
        a {
          display: block;
          padding: 10px 0;
          font-family: @font-swatch6-font-family;
          font-size: @font-swatch6-font-size;
          font-weight: @font-swatch6-font-weight;
          color: @font-swatch6-color;
          line-height: @font-swatch6-line-height;
          letter-spacing: @font-swatch6-letter-spacing;
          &:hover {
            color: @font-swatch6-color-hover;
            text-decoration: none;
          }
          &.pull {
            display: none;
          }
        }
        &.folder {
          cursor: pointer;
          padding: 0;
          .text {
            display: block;
            padding: 10px 22px 10px 0;
            font-family: @font-swatch6-font-family;
            font-size: @font-swatch6-font-size;
            font-weight: @font-swatch6-font-weight;
            color: @font-swatch6-color;
            line-height: @font-swatch6-line-height;
            letter-spacing: @font-swatch6-letter-spacing;
            &:hover {
              color: @font-swatch6-color-hover;
              text-decoration: none;
            }
          }
        }
      }
    }
  }
}

.vertical-nav .widget.extendednavigation ul li.folder > ul > li .text:hover {
  background-image: none;
}

/* DROPDOWN MENU */

.vertical-nav .widget.extendednavigation li > ul {
    display: none;
}

.vertical-nav .widget.extendednavigation li:hover > ul {
    display: block;
    width: 100%;
    background-color: darken(@color-swatch1,3%);
    z-index: 999999;
    padding: 0;
    margin: 0;
    border-left: none;
    text-align: right;
}

.vertical-nav .widget.extendednavigation li:hover > ul > li {
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box; /* Opera/IE 8+ */
}

.vertical-nav .widget.extendednavigation li:hover > ul > li > a {
    display: block;
    padding: 0;
}

.vertical-nav .widget.extendednavigation ul li.folder ul li .text {
  color: @font-swatch6-color;
  padding: 10px 15px 10px 10px;
}

/* Selected state */

.extendednavigation ul li.folder.selected ul li .text {
    color: @font-swatch6-color;
}

.extendednavigation ul li.selected, .extendednavigation ul li:hover ul li.selected, .extendednavigation ul li.folder.selected ul li.selected, .extendednavigation ul li.folder.selected {
    a, .text {
        color: @font-swatch6-color-hover;
    }
}


/* EXTENDED NAVIGATION - INSIDE ZONE */

.main .widget.extendednavigation {
    max-width: 100%;
    width: 100%;
}
/* ... */

